[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2.8"
serde = "1.0.145"
serde_json = "1.0.85"
rand = "0.8.5"
geoutils = "0.5.1"
titlecase = "2.2.0"

[dependencies.chrono]
version = "0.4.22"
features = ["serde"]

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dependencies.fake]
version = "2.5.0"
features = ["derive", "chrono", "http", "uuid"]
